# transcripteur

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture_overview.md  prerequis.md  project_charter.md  requirements.md  roadmap.md
scripts/: transcribe_folder.py
src/transcripteur/: __init__.py  __main__.py  cli.py  config.py  export.py  preprocessing.py  transcription.py
src/transcripteur/commands/: __init__.py  benchmark.py  doctor.py  mic.py  transcribe.py
tests/: test_cli.py  test_config.py
